<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="bt.motogp.RiderActivity">
    <item android:id="@+id/action_watch" android:title="@string/action_watch"
        android:orderInCategory="100" android:enabled="false" />
    <item android:id="@+id/action_track" android:title="@string/action_track"
        android:orderInCategory="100" />
    <item android:id="@+id/action_riders" android:title="@string/action_riders"
        android:orderInCategory="100"  />
    <item android:id="@+id/action_vote" android:title="@string/action_vote"
        android:orderInCategory="100" android:enabled="false" />
    <item android:id="@+id/action_talk" android:title="@string/action_talk"
        android:orderInCategory="100" android:enabled="false" />
</menu>
